--- a/style.scss
+++ b/style.scss
@@ -6,3 +6,11 @@ html {
   *:after {
     box-sizing: inherit;
   }
+
+  .avatar {
+    display: flex;
+    flex-shrink: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
