--- a/style.css
+++ b/style.css
@@ -6,18 +6,27 @@ html {
 *:after {
   box-sizing: inherit; }
 
-body {
+.body {
   height: 100vh;
+  background-color: #18191a;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #b0946c;
+  position: relative; }
+
+.checkbox {
+  position: absolute;
+  top: 30px; }
 
 .card {
   display: flex;
+  background-color: #242526;
   width: 824px;
   max-height: 780px;
-  padding: 32px;
-  border: solid 2px black;
+  padding: 24px;
+  border: solid 2px #242526;
   border-radius: 8px; }
 
 .avatar {
@@ -34,20 +43,38 @@ body {
   justify-content: center;
   align-items: center; }
   .person__name {
-    margin: 0; }
+    margin: 0;
+    color: #b0946c; }
   .person__position {
     margin: 0; }
+
+.me__heading {
+  color: #b0946c;
+  margin: 0; }
 
 .description__title, .learning__heading, .socialmedia__heading {
   font-size: 18px;
   font-weight: 500;
-  margin-bottom: 0; }
+  margin: 0;
+  padding: 0;
+  color: #b0946c; }
 
 .learning__paragraf, .description__myself {
-  margin-top: 4px; }
+  margin-top: 4px;
+  padding-top: 0px; }
 
 .learning__paragraf {
   margin: 4px 0; }
 
 .learning__list {
   margin: 0; }
+
+.logo {
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+  color: #45bd62; }
+
+.body--js {
+  background-color: #fff;
+  color: #fff; }
