--- a/style.scss
+++ b/style.scss
@@ -10,23 +10,37 @@ html {
   @mixin fontStyles {
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
+    color: #b0946c;
   }
 
-  body {
+  .body {
     height: 100vh;
+    background-color: #18191a;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #b0946c;
+    position: relative;
+  }
+
+  .checkbox {
+    position: absolute;
+    top: 30px;
+
   }
 
   .card {
     display: flex;
+    background-color: #242526;
     width: 824px;
     max-height: 780px;
-    padding: 32px;
-    border: solid 2px black;
+    padding: 24px;
+    border: solid 2px #242526;
     border-radius: 8px;
+    
   }
 
   .avatar {
@@ -45,8 +59,16 @@ html {
     align-items: center;
     &__name  {
       margin: 0;
+      color: #b0946c;
     }
     &__position {
+      margin: 0;
+    }
+  }
+
+  .me {
+    &__heading {
+      color: #b0946c;
       margin: 0;
     }
   }
@@ -57,6 +79,7 @@ html {
   
   .learning__paragraf, .description__myself {
     margin-top: 4px;
+    padding-top: 0px;
   }
 
   .learning {
@@ -67,3 +90,16 @@ html {
       margin: 0;
     }
   }
+
+  .logo {
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+    color: #45bd62;
+  }
+
+  .body--js {
+  background-color: #fff;
+  color: #fff;
+  }
+
