--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ html {
 *:after {
   box-sizing: inherit; }
 
+:root {
+  --dark-background: #18191a;
+  --dark-textColor: #b0946c;
+  --dark-cardBackground: #242526; }
+
 .body--js {
   background-color: #fff;
   color: #fff; }
@@ -17,10 +22,11 @@ html {
   justify-content: center;
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #b0946c;
-  position: relative; }
+  color: var(--dark-textColor);
+  position: relative;
+  margin: 0; }
 
-.checkbox {
+.button {
   position: absolute;
   top: 30px; }
 
@@ -29,11 +35,11 @@ html {
   grid-template-areas: "header header header" "aside . article";
   grid-template-columns: 150px 8px 1fr;
   column-gap: 8px;
-  background-color: #242526;
+  background-color: var(--dark-cardBackground);
   width: 824px;
   max-height: 780px;
   padding: 24px;
-  border: solid 2px #242526;
+  border: solid 2px var(--dark-cardBackground);
   border-radius: 8px; }
 
 .avatar {
@@ -54,7 +60,7 @@ html {
   align-items: center; }
   .person__name {
     margin: 0;
-    color: #b0946c; }
+    color: var(--dark-textColor); }
   .person__position {
     margin: 0; }
 
@@ -82,7 +88,7 @@ html {
   margin-bottom: 60px; }
 
 .me__heading {
-  color: #b0946c;
+  color: var(--dark-textColor);
   margin: 0; }
 
 .description__title, .learning__heading, .socialmedia__heading {
@@ -90,7 +96,7 @@ html {
   font-weight: 500;
   margin: 0;
   padding: 0;
-  color: #b0946c; }
+  color: var(--dark-textColor); }
 
 .learning__paragraf, .description__myself {
   margin-top: 4px;
@@ -111,6 +117,6 @@ html {
 
 .logo:hover {
   transform: scale(1.2);
-  background-color: #b0946c;
-  border: solid 1px #b0946c;
+  background-color: var(--dark-textColor);
+  border: solid 1px var(--dark-textColor);
   border-radius: 4px; }
