--- a/style.scss
+++ b/style.scss
@@ -7,12 +7,19 @@ html {
     box-sizing: inherit;
   }
 
+  :root {
+    --dark-background: #18191a;
+    --dark-textColor: #b0946c;
+    --dark-cardBackground: #242526;
+  }
+
   @mixin fontStyles {
     font-size: 18px;
     font-weight: 500;
     margin: 0;
     padding: 0;
-    color: #b0946c;
+    color: var(--dark-textColor);
+    
   }
   .body--js {
     background-color: #fff;
@@ -26,11 +33,13 @@ html {
     justify-content: center;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #b0946c;
+    color: var(--dark-textColor);
     position: relative;
+    margin: 0;
+
   }
 
-  .checkbox {
+  .button {
     position: absolute;
     top: 30px;
 
@@ -42,11 +51,11 @@ html {
     "aside . article";
     grid-template-columns: 150px 8px 1fr;
     column-gap: 8px;
-    background-color: #242526;
+    background-color: var(--dark-cardBackground);
     width: 824px;
     max-height: 780px;
     padding: 24px;
-    border: solid 2px #242526;
+    border: solid 2px var(--dark-cardBackground);
     border-radius: 8px;
     
   }
@@ -70,7 +79,7 @@ html {
     align-items: center;
     &__name  {
       margin: 0;
-      color: #b0946c;
+      color: var(--dark-textColor);
     }
     &__position {
       margin: 0;
@@ -104,7 +113,7 @@ html {
 
   .me {
     &__heading {
-      color: #b0946c;
+      color: var(--dark-textColor);
       margin: 0;
     }
   }
@@ -137,9 +146,10 @@ html {
 
   .logo:hover {
     transform: scale(1.2);
-    background-color:#b0946c;
-    border: solid 1px #b0946c;
+    background-color:var(--dark-textColor);
+    border: solid 1px var(--dark-textColor);
     border-radius: 4px;
   }
 
  
+  
