--- a/style.css
+++ b/style.css
@@ -7,22 +7,18 @@ html {
   box-sizing: inherit; }
 
 :root {
-  --dark-background: #18191a;
-  --dark-textColor: #b0946c;
-  --dark-cardBackground: #242526; }
-
-.body--js {
-  background-color: #fff;
-  color: #fff; }
+  --background-color: #18191a;
+  --text-color: #b0946c;
+  --main-background: #242526; }
 
 .body {
   height: 100vh;
-  background-color: #18191a;
+  background-color: var(--background-color);
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: var(--dark-textColor);
+  color: var(--text-color);
   position: relative;
   margin: 0; }
 
@@ -35,11 +31,11 @@ html {
   grid-template-areas: "header header header" "aside . article";
   grid-template-columns: 150px 8px 1fr;
   column-gap: 8px;
-  background-color: var(--dark-cardBackground);
+  background-color: var(--main-background);
   width: 824px;
   max-height: 780px;
   padding: 24px;
-  border: solid 2px var(--dark-cardBackground);
+  border: solid 2px var(--main-background);
   border-radius: 8px; }
 
 .avatar {
@@ -60,7 +56,7 @@ html {
   align-items: center; }
   .person__name {
     margin: 0;
-    color: var(--dark-textColor); }
+    color: var(--text-color); }
   .person__position {
     margin: 0; }
 
@@ -88,7 +84,7 @@ html {
   margin-bottom: 60px; }
 
 .me__heading {
-  color: var(--dark-textColor);
+  color: var(--text-color);
   margin: 0; }
 
 .description__title, .learning__heading, .socialmedia__heading {
@@ -96,7 +92,7 @@ html {
   font-weight: 500;
   margin: 0;
   padding: 0;
-  color: var(--dark-textColor); }
+  color: var(--text-color); }
 
 .learning__paragraf, .description__myself {
   margin-top: 4px;
@@ -117,6 +113,6 @@ html {
 
 .logo:hover {
   transform: scale(1.2);
-  background-color: var(--dark-textColor);
-  border: solid 1px var(--dark-textColor);
+  background-color: var(--text-color);
+  border: solid 1px var(--text-color);
   border-radius: 4px; }
