add style for button

--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ html {
 :root {
   --background-color: #18191a;
   --text-color: #b0946c;
-  --main-background: #242526; }
+  --main-background: #242526;
+  --button-color: #001a23;
+  --button-background: #D6D1CD; }
 
 .body {
   height: 100vh;
@@ -24,7 +26,17 @@ html {
 
 .button {
   position: absolute;
-  top: 30px; }
+  top: 30px;
+  padding: 5px 15px;
+  color: var(--button-color);
+  background-color: var(--button-background);
+  border: none;
+  font-size: 25px;
+  border-radius: 12px;
+  outline: none;
+  cursor: pointer; }
+  .button:hover {
+    transform: scale(1.1); }
 
 .card {
   display: grid;
