--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
   --text-color: #b0946c;
   --main-background: #242526;
   --button-color: #001a23;
-  --button-background: #D6D1CD; }
+  --button-background: #d6d1cd; }
 
 .body {
   height: 100vh;
@@ -19,7 +19,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--text-color);
   position: relative;
   margin: 0; }
@@ -50,7 +50,7 @@ html {
   border: solid 2px var(--main-background);
   border-radius: 8px; }
 
-.avatar {
+.aside__avatar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -81,6 +81,12 @@ html {
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
+  .aside__socialmedia {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px; }
 
 .content {
   grid-column-start: 3;
@@ -88,25 +94,21 @@ html {
   grid-row-start: 2;
   grid-row-end: 4; }
 
-.socialmedia {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 60px; }
-
 .me__heading {
   color: var(--text-color);
   margin: 0; }
 
-.description__title, .learning__heading, .socialmedia__heading {
+.description__title,
+.learning__heading,
+.socialmedia__heading {
   font-size: 18px;
   font-weight: 500;
   margin: 0;
   padding: 0;
   color: var(--text-color); }
 
-.learning__paragraf, .description__myself {
+.learning__paragraf,
+.description__myself {
   margin-top: 4px;
   padding-top: 0px; }
 
@@ -122,9 +124,8 @@ html {
   height: 35px;
   margin-right: 10px;
   padding: 6px; }
-
-.logo:hover {
-  transform: scale(1.2);
-  background-color: var(--text-color);
-  border: solid 1px var(--text-color);
-  border-radius: 4px; }
+  .logo:hover {
+    transform: scale(1.2);
+    background-color: var(--text-color);
+    border: solid 1px var(--text-color);
+    border-radius: 4px; }
