--- a/style.scss
+++ b/style.scss
@@ -1,165 +1,160 @@
 html {
-    box-sizing: border-box;
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-  :root {
-    --background-color: #18191a;
-    --text-color: #b0946c;
-    --main-background: #242526;
-    --button-color: #001a23;
-    --button-background: #D6D1CD;
+:root {
+  --background-color: #18191a;
+  --text-color: #b0946c;
+  --main-background: #242526;
+  --button-color: #001a23;
+  --button-background: #d6d1cd;
+}
+
+@mixin fontStyles {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+  color: var(--text-color);
+}
+
+.body {
+  height: 100vh;
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--text-color);
+  position: relative;
+  margin: 0;
+}
+
+.button {
+  position: absolute;
+  top: 30px;
+  padding: 5px 15px;
+  color: var(--button-color);
+  background-color: var(--button-background);
+  border: none;
+  font-size: 25px;
+  border-radius: 12px;
+  outline: none;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.1);
   }
+}
 
-  @mixin fontStyles {
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0;
-    padding: 0;
-    color: var(--text-color);
-    
-  }
-  
-  
-  .body {
-    height: 100vh;
-    background-color: var(--background-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: var(--text-color);
-    position: relative;
-    margin: 0;
-
-  }
-
-  .button {
-    position: absolute;
-    top: 30px;
-    padding: 5px 15px;
-    color: var(--button-color);
-    background-color: var(--button-background);
-    border: none;
-    font-size: 25px;
-    border-radius: 12px;
-    outline: none;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.1);
-    }
-
-  }
-
-  .card {
-    display: grid;
-    grid-template-areas: "header header header"
+.card {
+  display: grid;
+  grid-template-areas:
+    "header header header"
     "aside . article";
-    grid-template-columns: 150px 8px 1fr;
-    column-gap: 8px;
-    background-color: var(--main-background);
-    width: 824px;
-    max-height: 780px;
-    padding: 24px;
-    border: solid 2px var(--main-background);
-    border-radius: 8px;
-    
-  }
+  grid-template-columns: 150px 8px 1fr;
+  column-gap: 8px;
+  background-color: var(--main-background);
+  width: 824px;
+  max-height: 780px;
+  padding: 24px;
+  border: solid 2px var(--main-background);
+  border-radius: 8px;
+}
 
-  .avatar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-  }
+.aside__avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
 
-  .person {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    &__name  {
-      margin: 0;
-      color: var(--text-color);
-    }
-    &__position {
-      margin: 0;
-    }
+.person {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__name {
+    margin: 0;
+    color: var(--text-color);
   }
+  &__position {
+    margin: 0;
+  }
+}
 
-  .aside {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .content {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
-  }
-
-  .socialmedia {
+.aside {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  &__socialmedia {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 60px;
   }
+}
+.content {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
 
-  .me {
-    &__heading {
-      color: var(--text-color);
-      margin: 0;
-    }
+.me {
+  &__heading {
+    color: var(--text-color);
+    margin: 0;
   }
+}
 
-  .description__title, .learning__heading, .socialmedia__heading {
-    @include fontStyles()
-  }
-  
-  .learning__paragraf, .description__myself {
-    margin-top: 4px;
-    padding-top: 0px;
-  }
+.description__title,
+.learning__heading,
+.socialmedia__heading {
+  @include fontStyles();
+}
 
-  .learning {
-    &__paragraf {
-      margin: 4px 0;
-    }
-    &__list {
-      margin: 0;
-    }
-  }
+.learning__paragraf,
+.description__myself {
+  margin-top: 4px;
+  padding-top: 0px;
+}
 
-  .logo {
-    box-sizing: content-box;
-    width: 35px;
-    height: 35px;
-    margin-right: 10px;
-    padding: 6px;
+.learning {
+  &__paragraf {
+    margin: 4px 0;
   }
+  &__list {
+    margin: 0;
+  }
+}
 
-  .logo:hover {
+.logo {
+  box-sizing: content-box;
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+  padding: 6px;
+  &:hover {
     transform: scale(1.2);
-    background-color:var(--text-color);
+    background-color: var(--text-color);
     border: solid 1px var(--text-color);
     border-radius: 4px;
   }
-
- 
-  
+}
