--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 :root {
   --background-color: #18191a;
   --text-color: #b0946c;
-  --main-background: #242526;
+  --main-background: #323336;
   --button-color: #001a23;
   --button-background: #d6d1cd; }
 
@@ -50,15 +50,6 @@ html {
   border: solid 2px var(--main-background);
   border-radius: 8px; }
 
-.aside__avatar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%; }
-
 .person {
   grid-column-start: 2;
   grid-column-end: 4;
@@ -87,6 +78,14 @@ html {
     justify-content: center;
     align-items: center;
     margin-bottom: 60px; }
+  .aside__avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%; }
 
 .content {
   grid-column-start: 3;
@@ -129,3 +128,43 @@ html {
     background-color: var(--text-color);
     border: solid 1px var(--text-color);
     border-radius: 4px; }
+
+@media screen and (max-width: 376px) {
+  body {
+    font-size: xx-small; }
+    body .person {
+      margin-right: 35px; }
+  .card {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    padding: 8px;
+    position: relative; }
+  .aside__avatar {
+    width: 56px;
+    height: 56px;
+    position: absolute;
+    top: 6px;
+    right: 6px; }
+  .aside__socialmedia {
+    display: inline-block;
+    margin: 0px; }
+  .logo {
+    box-sizing: content-box;
+    width: 18px;
+    height: 18px;
+    padding: 6px; }
+    .logo:hover {
+      transform: scale(1.2);
+      background-color: var(--text-color);
+      border: solid 1px var(--text-color);
+      border-radius: 4px; }
+  .description__title,
+  .learning__heading,
+  .socialmedia__heading {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    color: var(--text-color);
+    font-size: 12px; } }
