--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ html {
   .card {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    max-width: 300px;
     padding: 8px;
     position: relative; }
   .aside__avatar {
@@ -168,3 +168,111 @@ html {
     padding: 0;
     color: var(--text-color);
     font-size: 12px; } }
+
+@media screen and (max-width: 568px) {
+  body {
+    font-size: xx-small; }
+    body .person {
+      margin-right: 35px; }
+  .card {
+    display: flex;
+    flex-direction: column;
+    max-width: 420px;
+    padding: 8px;
+    margin-top: 50px;
+    position: relative; }
+  .aside__avatar {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    top: 8px;
+    right: 8px; }
+  .aside__socialmedia {
+    display: inline-block;
+    margin: 0px; }
+  .logo {
+    box-sizing: content-box;
+    width: 18px;
+    height: 18px;
+    padding: 6px; }
+    .logo:hover {
+      transform: scale(1.2);
+      background-color: var(--text-color);
+      border: solid 1px var(--text-color);
+      border-radius: 4px; }
+  .description__title,
+  .learning__heading,
+  .socialmedia__heading {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    color: var(--text-color);
+    font-size: 12px; }
+  .button {
+    position: absolute;
+    top: 8px;
+    padding: 5px 15px;
+    color: var(--button-color);
+    background-color: var(--button-background);
+    border: none;
+    font-size: 12px;
+    border-radius: 12px;
+    outline: none;
+    cursor: pointer; }
+    .button:hover {
+      transform: scale(1.1); } }
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: xx-small; }
+    body .person {
+      margin-right: 35px; }
+  .card {
+    display: flex;
+    flex-direction: column;
+    max-width: 520px;
+    padding: 8px;
+    margin-top: 50px;
+    position: relative; }
+  .aside__avatar {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    top: 8px;
+    right: 8px; }
+  .aside__socialmedia {
+    display: inline-block;
+    margin: 0px; }
+  .logo {
+    box-sizing: content-box;
+    width: 18px;
+    height: 18px;
+    padding: 6px; }
+    .logo:hover {
+      transform: scale(1.2);
+      background-color: var(--text-color);
+      border: solid 1px var(--text-color);
+      border-radius: 4px; }
+  .description__title,
+  .learning__heading,
+  .socialmedia__heading {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    color: var(--text-color);
+    font-size: 12px; }
+  .button {
+    position: absolute;
+    top: 8px;
+    padding: 5px 15px;
+    color: var(--button-color);
+    background-color: var(--button-background);
+    border: none;
+    font-size: 12px;
+    border-radius: 12px;
+    outline: none;
+    cursor: pointer; }
+    .button:hover {
+      transform: scale(1.1); } }
